# ai_engineer_cert_ind

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
db/init-scripts/: 01_schemas.sql  02_lang_setup.sql  03_app_user.sql  04_audit.sql  05_news.sql
docs/: data_privacy.md
docs/diagrams/: architecture.drawio  architecture_macro.drawio
docs/ideas/: adr.md  core_evolution.md  core_foundations.md  core_plan.md  ideas.md  improvements_plan.md  instructions.txt
docs/metrics/: metrics_validation.md
docs/privs/: data_privacy.md
scripts/: download_srag_data.py  explore_data.py  run_agent.py  seed_db.py  test_llm.py  validate_data.py
src/: config.py
src/agent/: guardrails.py  logging_config.py  orchestrator.py
src/agent/prompts/: __init__.py  analyze_metrics.txt  news_query_gen.txt  system.txt
src/agent/tools/: chart_tool.py  news_tool.py  report_tool.py  sql_tool.py
src/data/: embeddings.py  etl.py  models.py  queries.py
src/llm/: adapter.py  providers.py
src/ui/: app.py
tests/: conftest.py  test_chart_tool.py  test_embeddings.py  test_etl.py  test_guardrails.py  test_llm_adapter.py  test_metrics.py  test_news_tool.py  test_orchestrator.py  test_prompts.py  test_providers.py  test_report_tool.py  test_sql_tool.py  test_ui.py
