[project]
name = "srag-agent"
version = "0.1.0"
description = "SRAG AI Agent — Relatorios automatizados com LLM, RAG e dados do DATASUS"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real database and CSV data",
]